Upgrade Java 11->17, PostgreSQL 10->14